add maven surefire plugin