@@ -62,6 +62,18 @@
                     </includes>
                 </configuration>
             </plugin>
+            
+            <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-surefire-plugin</artifactId>
+                  <version>3.0.0-M5</version>
+                  <configuration>
+                      <forkCount>1</forkCount>
+                      <reuseForks>false</reuseForks>
+                      <argLine>--enable-preview</argLine>
+                  </configuration>
+            </plugin>
+
 
             <!-- Maven Shade Plugin for creating XPS and XPSDB jars -->
             <plugin>
